--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -144,7 +144,9 @@
     font-weight: 100;
   }
 
-  @include respond(tab-port) {  // width < 900px ?
+  @media  only screen and (max-width: 56.25em),
+          only screen and (hover: none) {  // width < 900px ?
+  // @include respond(tab-port) {  // width < 900px ?
     // FUNCTIONALITY
     height: auto;
     border-radius: 3px;
