--- a/Natours/sass/layout/_header.scss
+++ b/Natours/sass/layout/_header.scss
@@ -7,9 +7,9 @@
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
-  @media  (min-resolution: 192dpi) and (min-width: 37.5em), 
-          (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
-          (min-width: 125em) {
+  @media  only screen and (min-resolution: 192dpi) and (min-width: 37.5em), 
+          only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+          only screen and (min-width: 125em) {
     background-image: linear-gradient(to right bottom, rgba($color-secondary-light, 0.8), rgba($color-secondary-dark, 0.8)), url(../img/hero.jpg);
   }
 
