--- a/trillo/sass/_base.scss
+++ b/trillo/sass/_base.scss
@@ -22,7 +22,7 @@ Grey dark 3: #999
 
   --color-primary: #eb2f64;
   --color-primary-light: #FF3366;
-  --color-Primary-dark: #BA265D;
+  --color-primary-dark: #BA265D;
 
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
@@ -60,7 +60,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-Primary-dark));
+  background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
